// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventInfo should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    eventProps={
        Object {
            "date": "Tomorrow",
            "desc": "Really good",
            "groupName": "the cool people",
            "name": "Brandon",
            "time": 4,
            "ven": Object {
              "name": "cool spot",
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Brandon
</h1>,
        <h2>
          By: 
          the cool people
</h2>,
        <h3>
          At: 
          cool spot
</h3>,
        <p>
          Tomorrow
</p>,
        <p>
          4
</p>,
        <section>
          Really good
</section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Brandon",
        },
        "ref": null,
        "rendered": "Brandon",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "By: ",
            "the cool people",
          ],
        },
        "ref": null,
        "rendered": Array [
          "By: ",
          "the cool people",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "At: ",
            "cool spot",
          ],
        },
        "ref": null,
        "rendered": Array [
          "At: ",
          "cool spot",
        ],
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Tomorrow",
        },
        "ref": null,
        "rendered": "Tomorrow",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": 4,
        },
        "ref": null,
        "rendered": 4,
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Really good",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Really good",
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Brandon
</h1>,
          <h2>
            By: 
            the cool people
</h2>,
          <h3>
            At: 
            cool spot
</h3>,
          <p>
            Tomorrow
</p>,
          <p>
            4
</p>,
          <section>
            Really good
</section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Brandon",
          },
          "ref": null,
          "rendered": "Brandon",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "By: ",
              "the cool people",
            ],
          },
          "ref": null,
          "rendered": Array [
            "By: ",
            "the cool people",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "At: ",
              "cool spot",
            ],
          },
          "ref": null,
          "rendered": Array [
            "At: ",
            "cool spot",
          ],
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Tomorrow",
          },
          "ref": null,
          "rendered": "Tomorrow",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": 4,
          },
          "ref": null,
          "rendered": 4,
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Really good",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Really good",
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`EventInfo should match the snapshot without a venue 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    eventProps={
        Object {
            "date": "Tomorrow",
            "desc": "Really good",
            "groupName": "the cool people",
            "name": "Brandon",
            "time": 4,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Brandon
</h1>,
        <h2>
          By: 
          the cool people
</h2>,
        "",
        <p>
          Tomorrow
</p>,
        <p>
          4
</p>,
        <section>
          Really good
</section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Brandon",
        },
        "ref": null,
        "rendered": "Brandon",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "By: ",
            "the cool people",
          ],
        },
        "ref": null,
        "rendered": Array [
          "By: ",
          "the cool people",
        ],
        "type": "h2",
      },
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Tomorrow",
        },
        "ref": null,
        "rendered": "Tomorrow",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": 4,
        },
        "ref": null,
        "rendered": 4,
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Really good",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Really good",
        ],
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Brandon
</h1>,
          <h2>
            By: 
            the cool people
</h2>,
          "",
          <p>
            Tomorrow
</p>,
          <p>
            4
</p>,
          <section>
            Really good
</section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Brandon",
          },
          "ref": null,
          "rendered": "Brandon",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "By: ",
              "the cool people",
            ],
          },
          "ref": null,
          "rendered": Array [
            "By: ",
            "the cool people",
          ],
          "type": "h2",
        },
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Tomorrow",
          },
          "ref": null,
          "rendered": "Tomorrow",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": 4,
          },
          "ref": null,
          "rendered": 4,
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Really good",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Really good",
          ],
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
